log
Fri 10 Mar 2023 12:07:15 PM UTC: 
 tests:  0|7
total_score: 0/70
61f2c99
Fri 10 Mar 2023 12:11:40 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
94fb643
Fri 10 Mar 2023 12:22:19 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
4463328
Fri 10 Mar 2023 12:23:00 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
485c69a
Fri 10 Mar 2023 12:24:51 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
cbf2e0c
Fri 10 Mar 2023 12:25:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
32f805a
Thu 16 Mar 2023 04:04:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
570d050
Thu 16 Mar 2023 04:11:44 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:105:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  105 |     suma = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
df09248
Thu 16 Mar 2023 04:16:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
55b9078
Thu 16 Mar 2023 04:28:20 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:104:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  104 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
c5da649
Thu 16 Mar 2023 04:47:12 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:99:11: error: returning ‘Vector *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   99 |    return valor;
      |           ^~~~~
exercises.c: In function ‘sumaV’:
exercises.c:109:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  109 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
cc1: all warnings being treated as errors
Compilation failed
04ef3b0
Thu 16 Mar 2023 04:53:12 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:94:8: error: variable ‘valor’ set but not used [-Werror=unused-but-set-variable]
   94 |   int *valor;
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e48b076
Thu 16 Mar 2023 04:53:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
d3382fd
Thu 16 Mar 2023 04:57:53 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
871354a
Thu 16 Mar 2023 05:08:17 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:57:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   57 |   scanf("%c", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
425b84d
Thu 16 Mar 2023 05:13:06 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:57:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   57 |   scanf("%s", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1e5a6e
Thu 16 Mar 2023 05:15:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:56:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   56 |   scanf("%s", p->nombre);
      |   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d22000b
Thu 16 Mar 2023 05:15:21 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
147854f
Thu 16 Mar 2023 05:16:27 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:10: error: returning ‘char *’ from a function with incompatible return type ‘Persona *’ [-Werror=incompatible-pointer-types]
   58 |   return p->nombre;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
fe0c7ff
Thu 16 Mar 2023 05:16:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:10: error: returning ‘char’ from a function with return type ‘Persona *’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |   return *p->nombre;
      |          ^~~~~~~~~~
exercises.c:58:10: error: ‘*p.nombre[0]’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |   return *p->nombre;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eea66db
Thu 16 Mar 2023 05:16:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4f638bf
Fri 17 Mar 2023 11:43:20 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
d7be33d
Fri 17 Mar 2023 11:44:46 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 30/70
98533e5
Fri 17 Mar 2023 11:57:34 AM UTC: 
 exercises.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:116:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  116 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
test.c: In function ‘obtenerValor’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
test.c:271:1: error: no return statement in function returning non-void [-Werror=return-type]
test.c: In function ‘asignarValor’:
test.c:271:1: error: expected declaration or statement at end of input
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b5ca591
Fri 17 Mar 2023 11:58:30 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:116:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  116 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
exercises.c: In function ‘crearVector’:
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a1a044e
Fri 17 Mar 2023 11:58:43 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
80f174a
Fri 17 Mar 2023 11:59:09 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
3489e97
Fri 17 Mar 2023 12:13:07 PM UTC: 
 exercises.c | 22 ++++++++--------------
 1 file changed, 8 insertions(+), 14 deletions(-)
 tests:  6|2
total_score: 50/70
fc3415e
Fri 17 Mar 2023 12:14:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
1c7a625
Fri 17 Mar 2023 12:15:59 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f37ce0d
Fri 17 Mar 2023 12:16:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
1e50419
